--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 <body>
 	<h1>Under Constuction.</h1>
 	<a href="https://www.cnblogs.com/n00p"><h2>cnblog/n00p</h2></a>
+	<script>
+		window.location.href = "http://stackoverflow.com";
+	</script>
 </body>
 </html>
