--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>Under Constuction.</h1>
 	<a href="https://www.cnblogs.com/n00p"><h2>cnblog/n00p</h2></a>
 	<script>
-		window.location.href = "http://stackoverflow.com";
+		window.location.href = "https://www.cnblog.com/n00p";
 	</script>
 </body>
 </html>
