--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<h1>Under Constuction.</h1>
-	<a href="https://www.cnblogs.com/n00p"><h2>cnblog/n00p</h2></a>
+	<h1>Under Constuction. Redirecting to <a href="https://www.cnblogs.com/n00p"><h2>www.cnblogs.com/n00p</h2></a></h1>
+	
 	<script>
 		window.location.href = "https://www.cnblog.com/n00p";
 	</script>
