--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<h1>Under Constuction. Redirecting to <a href="https://www.cnblogs.com/n00p"><h2>www.cnblogs.com/n00p</h2></a></h1>
-	
-	<script>
-		window.location.href = "https://www.cnblog.com/n00p";
-	</script>
+	<h2>Under Constuction.</h2> 
+	<h2>Redirecting to <a href="https://www.cnblogs.com/n00p">www.cnblogs.com/n00p</h2></a>
 </body>
 </html>
