--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- jumbotron start -->
-<div class="container">
+<!-- <div class="container">
 	<div class="jumbotron p-3 p-md-5 text-white rounded bg-dark">
 		<div class="col-md-6 px-0">
 			<h1 class="display-4 font-italic">Title of a longer featured blog post</h1>
@@ -11,7 +11,8 @@ layout: default
 			<p class="lead mb-0"><a href="#" class="text-white font-weight-bold">Continue reading...</a></p>
 		</div>
 	</div>
-</div> <!-- jumbotron end -->
+</div>  -->
+<!-- jumbotron end -->
 
 <!-- posts start -->
 <main role="main" class="container">
